#49 - Data Input Support
- Objects can have initializers via IInitializer api
- SOA support for nested parameters via initializer
- Client api support for initializers
- ConstructorInfo support for Reflection api
- IsValueType support for TypeInfo

--- a/Routine/Api/Template/T4/ClientApi.tt
+++ b/Routine/Api/Template/T4/ClientApi.tt
@@ -44,6 +44,18 @@ namespace <#= Application.DefaultNamespace #>
 
 			<# } #>
 		<# } #>
+
+		<# if(model.CanInitialize) { #>
+			<# foreach(var group in model.Initializer.Groups) { #>
+
+			public <#= model.FullName #> New<#= model.Name #>
+				(<#= string.Join(", ", group.Select(p => p.Model.FullName + " " + p.Id)) #>)
+			{
+				return new <#= model.FullName #>(rapplication, <#= string.Join(", ", group.Select(p => p.Id)) #>);
+			}
+
+			<# } #>
+		<# } #>
 	<# } #>
 	}
 }
@@ -61,6 +73,23 @@ namespace <#= model.Namespace #>
 		{
 			Robject = robject;
 		}
+
+	<# if(model.CanInitialize) { #>
+		<# foreach(var group in model.Initializer.Groups) { #>
+
+		<#= AccessModifier #> <#= model.Name #>
+			(<#= Type<Rapplication>() #> rapplication, <#= string.Join(", ", group.Select(p => p.Model.FullName + " " + p.Id)) #>)
+		{
+			Robject = rapplication
+				.Init("<#= model.Id #>"
+			<# foreach(var parameter in group) { #>
+					, <# ModelToRvariable(parameter, "rapplication"); #>
+			<# } #>
+				);
+		}
+
+		<# } #>
+	<# } #>
 
 	<# foreach(var member in model.Members) { #>
 		public <#= member.ReturnModel.FullName #> <#= member.Id #>
@@ -87,9 +116,9 @@ namespace <#= model.Namespace #>
 				)
 			;
 			
-		<# if(!operation.ReturnModel.IsVoid) { #>
+			<# if(!operation.ReturnModel.IsVoid) { #>
 			return <#= operation.Id #>_result.<# RobjectToModel(operation.ReturnModel); #>;
-		<# } #>
+			<# } #>
 		}
 
 		<# } #>
@@ -176,28 +205,29 @@ protected void RobjectToModel(ObjectCodeModel model)
 
 }
 
-protected void ModelToRvariable(ParameterCodeModel parameter)
+protected void ModelToRvariable(ParameterCodeModel parameter) { ModelToRvariable(parameter, "Robject.Application"); }
+protected void ModelToRvariable(ParameterCodeModel parameter, string rapplicationVar)
 { 
 	var model = parameter.Model; 
 	
 	if(model.IsList) { #>
 		<#+ if(model.IsValueModel) { #>
 
-			Robject.Application.NewVarList("<#= parameter.Id #>", <#= parameter.Id #>, o => <#= model.GetValueToStringCode("o") #>, "<#= model.Id #>")
+			<#= rapplicationVar #>.NewVarList("<#= parameter.Id #>", <#= parameter.Id #>, o => <#= model.GetValueToStringCode("o") #>, "<#= model.Id #>")
 
 		<#+ } else { #>
 
-			Robject.Application.NewVarList("<#= parameter.Id #>", <#= parameter.Id #>.Select(o => o.Robject))
+			<#= rapplicationVar #>.NewVarList("<#= parameter.Id #>", <#= parameter.Id #>.Select(o => o.Robject))
 
 		<#+ } #>
 	<#+ } else { #>
 		<#+ if(model.IsValueModel) { #>
 
-			Robject.Application.NewVar("<#= parameter.Id #>", <#= parameter.Id #>, o => <#= model.GetValueToStringCode("o") #>, "<#= model.Id #>")
+			<#= rapplicationVar #>.NewVar("<#= parameter.Id #>", <#= parameter.Id #>, o => <#= model.GetValueToStringCode("o") #>, "<#= model.Id #>")
 
 		<#+ } else { #>
 
-			Robject.Application.NewVar("<#= parameter.Id #>", <#= parameter.Id #>.Robject)
+			<#= rapplicationVar #>.NewVar("<#= parameter.Id #>", <#= parameter.Id #>.Robject)
 
 		<#+ } #>
 	<#+ } #>
