--- a/Routine/Soa/View/SoaTestPage.html
+++ b/Routine/Soa/View/SoaTestPage.html
@@ -371,6 +371,7 @@
             
             paramDiv.find("input,select").toggleDisabled();
             paramDiv.find("input[type=checkbox]").toggleDisabled();
+            paramDiv.find("div.parameter").find("input[type=checkbox]").toggleDisabled();
 
             normalizeParamIndices(chkbx, prefix);
         }
