--- a/Routine.Test.Web.Mvc.LeftMenu/Content/Master.css
+++ b/Routine.Test.Web.Mvc.LeftMenu/Content/Master.css
@@ -1,88 +1,437 @@
-*{padding:0; margin:0; }
-*{padding:0; margin:0; }
-body{font-family:Arial,Helvetica,sans-serif; font-size:11px;padding:0px;background-color:#f0f0f0;}
-.jqx-widget-content{font-size:11px;}
-.jqx-grid-table{font-size:11px;}
-td {white-space:nowrap;}
-a{text-decoration:none;}
-a img{border:0px;}
-a:hover{text-decoration:underline;}
+* {
+	padding: 0;
+	margin: 0;
+}
 
-footer{background-color:#555555;height:32px;border-top:3px solid #aaaaaa;color:#aaaaaa;position:fixed;bottom:0px;z-index:1}
-header,div.segment,footer{width:100%;text-align:center;}
-header div.wrapper,div.segment div.wrapper,footer div.wrapper{width:980px;margin-left:auto;margin-right:auto;text-align:left;padding:8px;}
-div.segment div.wrapper{border-top:0px;}
-div.menu div.wrapper{border: 0px;}
-div.main div.wrapper{border-bottom:0px;}
-div.main {padding-top:53px; padding-bottom:35px;z-index:0}
-footer div.wrapper{text-align:center;}
-div.menu {background-color:#1F3041;position:fixed;top:0px;z-index:1}
-div.menu img{margin-left: -390px;margin-top: 2px;width: 15%;}
-header h1{float:right;font-weight:normal;}
-header div.wrapper{height:100px;}
-div.menu a{float:none;margin-left:0px;border:0px;background-color:transparent;color:white;font-size:12px;padding:0px;font-weight:bold;padding-right:3px;}
-span.menu-separator{color:white;padding-right:3px;}
+body {
+	font-family: Arial,Helvetica,sans-serif;
+	font-size: 11px;
+	padding: 0px;
+	background-color: white;
+}
 
-fieldset,legend,fieldset.collapsible div.content{border-radius:3px;}
-/*input[type=submit]{border-radius:3px;}*/
-fieldset,legend{border:1px solid; padding:4px;margin-bottom:5px;}
-fieldset{display:block;clear:both;}
-legend{font-size:90%; text-align:left; padding:1px;margin:0px;}
-dl {width:100%;overflow:hidden;}
-dt {float:left;width:45%;font-weight:normal;color:#8a8a8a;text-align:left;padding-right:3px;margin-bottom:5px;}
-dd {float:left;width:45%;margin-bottom:10px;}
-input[type=text], textarea{height:20px;width:129px;border:1px solid #DDDDDD;}
-form.operation-form fieldset input[type=button].modal-search{width:131px;height:20px;font-size:11px;}
-textarea{height:80px;}
 
-fieldset,fieldset.collapsible{padding:10px;border:1px solid black;border-bottom-width:1px;border-left-width:1px;border-right-width:1px;padding-right:0px;}
-fieldset.collapsible{margin-bottom:0px;margin-top:23px;padding-bottom:0px;}
-fieldset.collapsed {border-width:0;margin:0;padding:0px;margin-top:0px;}
 
-legend.collapsible {cursor:hand;cursor:pointer;color:black;font-size:12px;font-weight:normal;padding:5px;margin-left:-10px;float:left;margin-top:-33px;background-color:#FAFAFA;}
-legend.collapsed{cursor:hand;cursor:pointer;padding:5px;font-size:12px;font-weight:normal;border:1px solid #BBBBBB;margin-right:3px;color:black;margin-top:3px;letter-spacing:normal;word-spacing:normal;}
-/*input[type=submit]{cursor:hand;cursor:pointer;padding:5px;font-size:12px;font-weight:normal;border:1px solid #BBBBBB;margin-right:3px;color:black;margin-top:3px;letter-spacing:normal;word-spacing:normal;}*/
-/*input[type=submit]{float:left;margin-top:0px;padding-bottom:4px;background-color:#2d8be5;color:white;border-color:#1a6ebf;}
-input[type=submit].disabled{color:#EEEEEE;background-color:#7b9ebf;border-color:#6685a3;}
-input[type=submit].disabled.collapsible{color:#999999;background-color:#F6F6F6;border-color:#BBBBBB;}*/
-legend.collapsed{float:none;margin-left:0px;margin-right:0px;}
+div.page {
+	position: absolute;
+	left: 0;
+	right: 0;
+}
 
-form.operation-form {display:inline;}
-form.operation-form fieldset{display:inline-block;float:left;clear:none;margin-right:5px;border:transparent;}
-form.operation-form fieldset,form.operation-form fieldset legend{border-color:#BBBBBB;}
-/*form.operation-form input[type=submit] {margin-right:5px;padding-top:4px;padding-bottom:5px;margin-bottom:10px;}*/
-/*div.data-tabs form.operation-form input[type=submit] {margin-top:1px;margin-bottom:0px;padding:5px;line-height:12px;font-size:11px;}
-form.operation-form fieldset input[type=submit] {float:right;margin-bottom:0px;}*/
-form.operation-form fieldset input[type=submit],form.operation-form fieldset input[type=button] {float:right;margin-right:8px;width:61px;}
-dl.parameter-list{width:240px;padding-right:10px;}
-dl {clear:both;width:100%;}
+	div.page div.menu {
+		width: 200px;
+		height: 2000px;
+		float: left;
+		border-right: 1px solid gray;
+		padding-right: 5px;
+		padding-left: 5px;
+		background-color: orange;
+		font-family: inherit;
+	}
 
-fieldset.object-data,fieldset.search-data{width:980px;display:inline-block;height:auto;border:0px;padding:0px;}
-legend.object-data,legend.search-data{border:0px;border-radius:0px;font-weight:bold;font-size:15px;margin-bottom:10px;padding-bottom:10px;border-bottom:1px solid #BBBBBB;width:100%;}
-dl.data-list{margin-top:0px;border-top:1px solid #BBBBBB;padding-top:10px;}
-dl.data-list.no-operation{border-top:0px;}
-dl.data-list dt{font-size:12px;width:100px;margin-right:10px;}
-dl.data-list dd{font-size:12px;width:365px;text-align:left;}
-dl.data-list dd.single-value input[type=submit],dl.data-list dd.list-value input[type=submit]{height:15px;font-weight:normal;font-size:10px;padding:1px;margin-top:-5px;float:none;}
-dl.data-list dd.single-value input[type=submit]{font-size:12px;}
+		div.page div.menu div.menu-item {
+		}
 
-dl.data-list dt.single-value {padding-left:12px;}
-span.member-value-data a.reference-link, a.reference-link {background-color:transparent;color:#1a6ebf;border:0px;padding:0px;}
-div.pq-grid a.reference-link {margin-top:1px;}
-div.operation-list{padding-top:10px;position:absolute;}
-div.operation-list-placeholder{margin-bottom:34px;}
-fieldset.collapsible div.content{z-index:2;position:absolute;border:1px solid #BBBBBB;background-color:#FAFAFA;padding:10px;margin:-10px;margin-top:-8px;padding-right:2px;box-shadow:5px 5px 5px #BBBBBB;}
-span.member-value-data{}
-span.operation-separator{display:inline;float:left;margin-right:5px;margin-top:5px;}
-div.operation-tabs{margin-bottom:10px;}
-div.confirm{padding:5px;font-size:13px;}
-.context-menu .jqx-fill-state-normal,.context-menu .jqx-fill-state-hover{border:0px;background-color:inherit;}
-.context-menu .jqx-button{padding:0px;}
-.context-menu{display:none;position:fixed;}
-b input[type=button]{font-weight:bold;}
+		div.page div.menu div.user {
+			-moz-border-bottom-colors: none;
+			-moz-border-left-colors: none;
+			-moz-border-right-colors: none;
+			-moz-border-top-colors: none;
+			border-color: -moz-use-text-color -moz-use-text-color white;
+			border-image: none;
+			border-radius: 0;
+			border-style: none none solid;
+			border-width: 0 0 1px;
+			font-size: 15px;
+			font-weight: bold;
+			height: 34px;
+			margin-top: 15px;
+			color: white;
+			margin-bottom: 10px;
+		}
 
-.menu{height:53px;}
-.menu .parent{float:left;padding-right:4px;}
-.menu .children{position: absolute;padding-top:8px;padding-bottom:8px;}
-.menu .children-after-first{margin-left:10px}
-.menu a.search-link{}
+			div.page div.menu div.user a {
+				color: white;
+			}
+
+				div.page div.menu div.user a:hover {
+					color: lightgray;
+				}
+
+		div.page div.menu a {
+			text-decoration: none;
+			line-height: 30px;
+			color: black;
+			font-weight: bold;
+		}
+
+		div.page div.menu div.menu-item div.parent {
+			border: 1px solid black;
+			height: 30px;
+			font-size: 14px;
+			background-color: white;
+			margin-bottom: 5px;
+			margin-top: 5px;
+			cursor: pointer;
+			z-index: 100;
+			position: relative;
+		}
+
+			div.page div.menu div.menu-item div.parent a {
+				pointer-events: none;
+				cursor: pointer;
+				display: block;
+				padding-left: 20px;
+			}
+
+		div.page div.menu div.menu-item div.children {
+			border: 1px solid gray;
+			font-size: 14px;
+			background-color: white;
+			margin-bottom: 5px;
+			margin-top: -5px;
+			background-color: white;
+			height: 0;
+			position: relative;
+		}
+
+			div.page div.menu div.menu-item div.children a {
+				position: absolute;
+				padding-left: 20px;
+				right: 0;
+				left: 0;
+				top: -30px;
+			}
+
+				div.page div.menu div.menu-item div.children a:hover {
+					background-color: skyblue;
+					color: white;
+				}
+
+	div.page div.page-content {
+		border-left: 1px solid gray;
+		display: block;
+		left: 211px;
+		padding-left: 10px;
+		padding-top: 20px;
+		position: absolute;
+		right: 0;
+		overflow-y: scroll;
+	}
+
+div.context-menus div {
+	display: none;
+}
+
+div.context-menu {
+	position: fixed;
+}
+
+	div.context-menu a {
+		display: block;
+	}
+
+	div.context-menu .jqx-fill-state-normal {
+		border: none;
+	}
+
+	div.context-menu .jqx-fill-state-hover {
+		border: none;
+	}
+
+	div.context-menu input {
+		width: 100%;
+		text-align: left;
+	}
+
+
+.operation-tabs {
+}
+
+header h1 {
+	float: right;
+	font-weight: normal;
+}
+
+header div.wrapper {
+	height: 100px;
+}
+
+
+dl {
+	overflow: hidden;
+}
+
+dt {
+	float: left;
+	font-weight: normal;
+	color: #8a8a8a;
+	text-align: left;
+	padding-right: 3px;
+	margin-bottom: 5px;
+	width: 300px;
+}
+
+dd {
+	float: left;
+	width: 300px;
+	margin-bottom: 10px;
+}
+
+input[type=text] {
+	height: 20px;
+	width: 350px;
+	border: 1px solid #DDDDDD;
+}
+
+input[data-type=c-phone], input[data-type=c-email], input[type=password] {
+	height: 20px;
+	width: 290px;
+	border: 1px solid #DDDDDD;
+}
+
+textarea {
+	height: 100px;
+	width: 350px;
+}
+
+select {
+	text-align: left;
+}
+
+fieldset, fieldset.collapsible {
+	padding: 10px;
+	border: 1px solid black;
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+	border-right-width: 1px;
+	padding-right: 0px;
+}
+
+	fieldset.collapsible {
+		margin-bottom: 0px;
+		margin-top: 23px;
+		padding-bottom: 0px;
+	}
+
+	fieldset.collapsed {
+		border-width: 0;
+		margin: 0;
+		padding: 0;
+		margin-top: 0;
+	}
+
+legend.collapsible {
+	cursor: pointer;
+	color: black;
+	font-size: 12px;
+	font-weight: normal;
+	padding: 5px;
+	margin-left: -10px;
+	float: left;
+	margin-top: -33px;
+	background-color: #FAFAFA;
+}
+
+legend.collapsed {
+	cursor: pointer;
+	padding: 5px;
+	font-size: 12px;
+	font-weight: normal;
+	border: 1px solid #BBBBBB;
+	margin-right: 3px;
+	color: black;
+	margin-top: 3px;
+	letter-spacing: normal;
+	word-spacing: normal;
+}
+
+legend.collapsed {
+	float: none;
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
+div.operation-buttons {
+	margin-bottom: 10px;
+	padding: 3px;
+	background-color: #faa732;
+	background-image: linear-gradient(to bottom, #fbb450, #f89406);
+	background-repeat: repeat-x;
+	border-color: #e48605;
+	color: #ffffff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+form.operation-form {
+	display: inline;
+}
+
+	form.operation-form fieldset {
+		display: inline-block;
+		float: left;
+		clear: none;
+		margin-right: 5px;
+		border: transparent;
+		width: 360px;
+	}
+
+		form.operation-form fieldset, form.operation-form fieldset legend {
+			border-color: #BBBBBB;
+		}
+
+.operation-tabs form.operation-form fieldset input[type="submit"], form.operation-form fieldset input[type="button"] {
+	float: left;
+	margin-right: 8px;
+	cursor: pointer;
+}
+
+.operation-form-div {
+	display: none;
+}
+	.operation-form-div form.operation-form fieldset input[type=submit],
+	.operation-form-div form.operation-form fieldset input[type=button] {
+		float: right;
+		margin-left: 8px;
+	}
+
+dl.parameter-list {
+	padding-right: 10px;
+}
+
+dl {
+	clear: both;
+}
+
+
+
+fieldset.search-data {
+	border: 0 none;
+	display: inline-block;
+	height: auto;
+	padding: 0;
+	margin-left: 20px;
+}
+
+fieldset.object-data {
+	border: 0 none;
+	display: inline-block;
+	height: auto;
+	margin-left: 20px;
+	padding: 0;
+}
+
+legend.search-data {
+	border: 0px;
+	border-radius: 0px;
+	font-weight: bold;
+	font-size: 15px;
+	margin-bottom: 10px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #BBBBBB;
+}
+
+legend.object-data {
+	border: 0px;
+	border-radius: 0px;
+	font-weight: bold;
+	font-size: 15px;
+	margin-bottom: 10px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #BBBBBB;
+}
+
+dl.data-list {
+	margin-top: 0px;
+	border-top: 1px solid #BBBBBB;
+	padding-top: 10px;
+}
+
+	dl.data-list dt {
+		font-size: 12px;
+		width: 200px;
+		margin-right: 10px;
+	}
+
+	dl.data-list dd {
+		display: block;
+		float: left;
+		font-size: 12px;
+		text-align: left;
+		width: 900px;
+	}
+
+	dl.data-list dt.single-value {
+		float: left;
+		padding-left: 12px;
+		width: 200px;
+	}
+
+div.messages {
+	background-color: brown;
+	color: white;
+	font-weight: bold;
+	cursor: pointer;
+	cursor: pointer;
+	height: 50px;
+	position: relative;
+}
+
+form.operation-form fieldset input.modal-search[type="button"] {
+	font-size: 11px;
+	height: 20px;
+	width: 290px;
+}
+
+div.tab-container {
+	float: left;
+	height: 100px;
+	position: relative;
+	width: 1300px;
+	color: white;
+}
+
+	div.tab-container div.tab-header {
+		background-color: orange;
+		float: left;
+		font-size: 14px;
+		position: absolute;
+		width: 100%;
+		z-index: 2;
+		font-weight: bold;
+	}
+
+		div.tab-container div.tab-header div.tab {
+			background-color: orange;
+			border: 1px solid black;
+			float: left;
+			height: 30px;
+			line-height: 30px;
+			position: relative;
+			text-align: center;
+			width: 150px;
+		}
+
+			div.tab-container div.tab-header div.tab:hover {
+				background-color: lightsalmon;
+			}
+
+	div.tab-container div.tab-content {
+		float: left;
+		position: absolute;
+		top: 30px;
+		z-index: 1;
+	}
+
+	div.tab-container div.tab-header div.selected {
+		background-color: white;
+		color: black;
+	}
+
+		div.tab-container div.tab-header div.selected:hover {
+			background-color: white;
+		}
+
+	div.tab-container div.hide {
+		display: none;
+	}
