--- a/Routine/Soa/View/SoaTestPage.html
+++ b/Routine/Soa/View/SoaTestPage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Soa Client</title>
+    <title>Service UI</title>
     <style>
         body {font-family: monospace;font-size: 12px;background-color: #F7F7F7;}
         a {text-decoration: none;color: black;}
